# mkb

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  renovate.json5
--help/.mdkb/: index.db-shm  index.db-wal
.forgejo/: buildkitd.toml
.forgejo/workflows/: build.yaml  pr.yaml  renovate.yml
.github/workflows/: release.yml
app/mdkb-tauri/: README.md
app/mdkb-tauri/assets/: app-icon.xcf
app/mdkb-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/mdkb-tauri/src-tauri/icons/: icon.icns
app/mdkb-tauri/src-tauri/src/: lib.rs  main.rs
app/mdkb-tauri/ui/: index.html
app/mkb-tauri/: README.md
app/mkb-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/mkb-tauri/src-tauri/capabilities/: default.json
app/mkb-tauri/src-tauri/src/: lib.rs  main.rs
app/mkb-tauri/ui/: index.html
crates/mdkb-cli/: Cargo.toml
crates/mdkb-cli/src/: main.rs
crates/mdkb-core/: Cargo.toml
crates/mdkb-core/src/: block.rs  blockfile.rs  clock.rs  conflict.rs  dirs.rs  document.rs  embed.rs  export.rs  id.rs  index.rs  lib.rs  link.rs  render.rs  service.rs  sync.rs  vault.rs
crates/mdkb-core/tests/: docs_drift.rs
crates/mdkb-embed/: Cargo.toml
crates/mdkb-embed/assets/model/: PROVENANCE.md
crates/mdkb-embed/examples/: footprint.rs
crates/mdkb-embed/src/: embedded.rs  fast.rs  lib.rs  remote.rs  source.rs
crates/mdkb-index/: Cargo.toml
crates/mdkb-index/src/: lib.rs
crates/mdkb-mcp/: Cargo.toml
crates/mdkb-mcp/src/: daemon.rs  main.rs  rpc.rs  tools.rs
crates/mdkb-protocol/: Cargo.toml
crates/mdkb-protocol/src/: connect.rs  env.rs  lib.rs  paths.rs  transport.rs
crates/mdkb-view/: Cargo.toml
crates/mdkb-view/src/: lib.rs
crates/mdkb-web/: Cargo.toml
crates/mdkb-web/src/: http.rs  main.rs  routes.rs
crates/mdkbd/: Cargo.toml
crates/mdkbd/src/: config.rs  lock.rs  main.rs  server.rs  watcher.rs
crates/mkb-cli/: Cargo.toml
crates/mkb-cli/src/: main.rs
crates/mkb-core/: Cargo.toml
crates/mkb-core/src/: block.rs  blockfile.rs  clock.rs  conflict.rs  dirs.rs  embed.rs  export.rs  id.rs  index.rs  lib.rs  render.rs  service.rs  sync.rs  vault.rs
crates/mkb-core/tests/: docs_drift.rs
crates/mkb-embed/: Cargo.toml
crates/mkb-embed/assets/model/: PROVENANCE.md
crates/mkb-embed/examples/: footprint.rs
crates/mkb-embed/src/: embedded.rs  fast.rs  lib.rs  remote.rs  source.rs
crates/mkb-index/: Cargo.toml
crates/mkb-index/src/: lib.rs
crates/mkb-mcp/: Cargo.toml
crates/mkb-mcp/src/: main.rs  rpc.rs  tools.rs
crates/mkb-protocol/: Cargo.toml
crates/mkb-protocol/src/: connect.rs  env.rs  lib.rs  paths.rs  transport.rs
crates/mkb-view/: Cargo.toml
crates/mkb-view/src/: lib.rs
crates/mkbd/: Cargo.toml
crates/mkbd/src/: config.rs  lock.rs  main.rs  server.rs  watcher.rs
deploy/: README.md  k8s.yaml  mcp-config.example.json
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  PREREQS.md  SPEC.md  USAGE.md  architecture.md
docs/skills/mdkb-cli/: SKILL.md
docs/skills/mdkb-dedup/: SKILL.md
docs/skills/mdkb-dedup-mcp/: SKILL.md
docs/skills/mdkb-docs-as-data/: SKILL.md
docs/skills/mdkb-knowledge/: SKILL.md
docs/skills/mkb-cli/: SKILL.md
docs/skills/mkb-dedup/: SKILL.md
docs/skills/mkb-dedup-mcp/: SKILL.md
docs/skills/mkb-docs-as-data/: SKILL.md
docs/skills/mkb-knowledge/: SKILL.md
examples/demo-vault/: README.md
examples/demo-vault/blocks/: 01KVHJ76YA04MEM71HNDB7RT8G.md  01KVHJ76YBTAGACH3N0JBPVK2A.md  01KVHJ76YC71C4JQGSE31ND2F1.md  01KVHJ76YDYNZRS09J22JNXHXQ.md  01KVHJ76YEJQ03160TGTEJ5Q0C.md  01KVHJ76YHDWY5PMB7GY9B0WP6.md  01KVHJ76YJWVN2KK47J2K797QH.md  01KVHJ76YKA8S38DZQH99HQ431.md  01KVHJ76YMTM1WWJ21F77D8D2N.md  01KVHJ76YNHK360TVWADGH1JWP.md
vault/: README.md  export.manifest  export.toml
vault/blocks/: 01KVHJ76Y9NJ2E0FVGC904J9QJ.md  01KVHJ76YA04MEM71HNDB7RT8G.md  01KVHJ76YBTAGACH3N0JBPVK2A.md  01KVHJ76YC71C4JQGSE31ND2F1.md  01KVHJ76YEJQ03160TGTEJ5Q0C.md  01KVHJ76YFPY8M8T0KM0DKNEK5.md  01KVHJ76YGV0RD3NTDGWGYC9C1.md  01KVHJ76YHDWY5PMB7GY9B0WP6.md  01KVHJ76YJWVN2KK47J2K797QH.md  01KVHJ76YKA8S38DZQH99HQ431.md  01KVHJ76YMTM1WWJ21F77D8D2N.md  01KVHJ76YNHK360TVWADGH1JWP.md  01KVHJ76YP7S3062KWEZJJ02T8.md  01KVJ1H7GKWTW2E0V690MRHSD2.md  01KVJ1H7J1B5J2PQTZ8XPQAF93.md  01KVJ1H7K19RFHWN62WM3QT5QJ.md  01KVJ1H7KNR0V62MBJBWPKMRQJ.md  01KVJ1H7MATVREF1KCPADX8BYD.md  01KVJ1H7MZB5BT8P87MK24WWSQ.md  01KVJ1H7NNYAGM0C3458HWV0SE.md  01KVJ1H7PC5EPNJP8YZZZ9A66E.md  01KVJ1H7Q4VCZ1TTHHS5BFQ4MF.md  01KVKBYMBJBHAY7E3R317ANN3P.md  01KVKBYMCVYWADCHVEJFBGZR8Z.md  01KVKBYMDS9STTDCAVZMYDVPHG.md  01KVKBYMEN9GTPBEJ6CWAJ6H0A.md  01KVKBYMFHA2P6HNNJS3FNREH3.md  01KVKBYMGE520KC88BPS8C7YXS.md  01KVKBYMHK88WKSN54KHV95CSX.md  01KVKBYMJS5MGCVSSFR8Z6H4MK.md  01KVKH5GTTRZ7XET8N2SYC5EPN.md  01KVKH5GX94BYEDTNEMA5W1NHS.md  01KVKH5GYBEGZVMQQYG4Q7SE8E.md  01KVKH5GZDV9MPQKCZ4VM6GQM9.md  01KVKH5H0H88ZTK52FBH60AWJG.md  01KVKH5H1R0129ZVGF76MAQZB9.md  01KVKH5H2ZH4890TK2G6NRR2EH.md  01KVKH5H48K7CNNXG1HH958MJ6.md  01KVKH5H5DS8TPSBC7T7PJF953.md  01KVKH5H6NV4178V7WGMQEXAHT.md  (+58 more)
