[workspace]
resolver = "2"
members = [
    "crates/mdkb-core",
    "crates/mdkb-index",
    "crates/mdkb-embed",
    "crates/mdkb-protocol",
    "crates/mdkb-view",
    "crates/mdkbd",
    "crates/mdkb-mcp",
    "crates/mdkb-cli",
]

# The Tauri desktop shell is an independent workspace: it needs the Tauri toolchain and
# system webview, which aren't required to build/test the core product. Excluded so
# `cargo test --workspace` stays green everywhere.
exclude = ["app/mdkb-tauri/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlucas2/mdkb"
rust-version = "1.80"

[workspace.dependencies]
mdkb-core = { path = "crates/mdkb-core" }
mdkb-index = { path = "crates/mdkb-index" }
mdkb-embed = { path = "crates/mdkb-embed" }
mdkb-protocol = { path = "crates/mdkb-protocol" }
mdkb-view = { path = "crates/mdkb-view" }
regex = "1"
ulid = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
rusqlite = "0.40"
tempfile = "3"
serde = "1"
serde_json = "1"
toml = "1.0"
# Pinned below 4.6: clap 4.6+ and clap_lex 1.1+ raise their MSRV to Rust 1.85, but this
# workspace targets rust-version = 1.80. `--locked` CI keeps the resolved version in range.
clap = { version = ">=4.5.61, <4.6.0", features = ["derive", "env"] }
