[workspace]
resolver = "2"
members = [
    "crates/mkb-core",
    "crates/mkb-index",
    "crates/mkb-embed",
    "crates/mkb-protocol",
    "crates/mkb-view",
    "crates/mkbd",
    "crates/mkb-mcp",
    "crates/mkb-cli",
]

# The Tauri desktop shell is an independent workspace: it needs the Tauri toolchain and
# system webview, which aren't required to build/test the core product. Excluded so
# `cargo test --workspace` stays green everywhere.
exclude = ["app/mkb-tauri/src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlucas2/mkb"
rust-version = "1.80"

[workspace.dependencies]
mkb-core = { path = "crates/mkb-core" }
mkb-index = { path = "crates/mkb-index" }
mkb-embed = { path = "crates/mkb-embed" }
mkb-protocol = { path = "crates/mkb-protocol" }
mkb-view = { path = "crates/mkb-view" }
regex = "1"
ulid = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
rusqlite = "0.40"
tempfile = "3"
serde = "1"
serde_json = "1"
base64 = "0.22"
toml = "1.0"
# Pinned below 4.6: clap 4.6+ and clap_lex 1.1+ raise their MSRV to Rust 1.85, but this
# workspace targets rust-version = 1.80. `--locked` CI keeps the resolved version in range.
clap = { version = ">=4.5.61, <4.6.0", features = ["derive", "env"] }
