[package]
name = "mdkb-cli"
description = "mdkb CLI: thin client for scripting and manual operations."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mdkb"
path = "src/main.rs"

[features]
default = []
onnx = ["mdkb-embed/onnx"]
# Remote OpenAI-compatible embeddings backend (opt-in; pulls a TLS client).
remote = ["mdkb-embed/remote"]

[dependencies]
mdkb-core.workspace = true
mdkb-index.workspace = true
mdkb-embed.workspace = true
mdkb-protocol.workspace = true
