[package]
name = "mdkb-embed"
description = "Embedder backends for mdkb: offline hash embedder, optional local ONNX (fastembed)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the local ONNX embedding model via fastembed. Off by default so the standard
# build/test path stays fully offline and light; the daemon opts in.
onnx = ["dep:fastembed"]

[dependencies]
mdkb-core.workspace = true
# Use rustls (not native-tls/openssl) for both the ort binary download and the hf-hub model
# download, so there is no openssl/libssl-dev dependency — this keeps cross-compilation
# clean. `image-models` is dropped: we only use text embeddings, and it pulls a heavy image
# codec tree (rav1e/ravif/exr/…).
fastembed = { version = "5", optional = true, default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
] }
