[package]
name = "mdkb-embed"
description = "Embedder backends for mdkb: offline hash embedder, optional local ONNX (fastembed)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the local ONNX embedding model via fastembed. Off by default so the standard
# build/test path stays fully offline and light; the daemon opts in.
onnx = ["dep:fastembed"]
# Compiles the BGE-small model weights directly into the binary (via include_bytes!) so the
# embedder is fully self-contained — semantic search works offline with no model files on disk,
# no download, no config. Implies `onnx` (the engine that runs the weights). The daemon turns
# this on by default; it can be turned off to keep the ~33MB of weights out of a binary.
vendored-model = ["onnx"]
# Enables the remote OpenAI-compatible embeddings backend (ureq, blocking + rustls). Off by
# default so thin clients and the offline test path don't pull a TLS stack; the daemon opts in.
remote = ["dep:ureq"]

[dependencies]
mdkb-core.workspace = true
# serde + serde_json: derive and parse the EmbedderSource config enum and the on-disk
# config.json the daemon/CLI read. Small, and already in the workspace tree.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Local ONNX via fastembed, loaded from vendored/local files only. We deliberately do NOT
# enable `hf-hub`, so the model-download path (`TextEmbedding::try_new`) is not even compiled
# in — the only way to load a model is from local files. `ort-download-binaries` is a
# build-time fetch of the onnxruntime native library (statically linked), not a runtime
# download. rustls (not native-tls/openssl) keeps cross-compilation clean. `image-models` is
# dropped: we only embed text.
fastembed = { version = "5", optional = true, default-features = false, features = [
    "ort-download-binaries-rustls-tls",
] }
# Remote embeddings client: blocking (matches the sync Embedder trait) + rustls (no openssl).
ureq = { version = "3", optional = true, default-features = false, features = [
    "rustls",
    "json",
] }

# Footprint/latency/recall benchmark for the native ONNX path; only built with the onnx
# feature so the default offline build/test path stays light.
[[example]]
name = "footprint"
required-features = ["onnx"]
