[package]
name = "mdkb-index"
description = "SQLite (FTS5 + sqlite-vec) implementation of the mdkb-core Index trait."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mdkb-core.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
