[package]
name = "mdkb-mcp"
description = "mdkb MCP server: thin client exposing core tools over MCP."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mdkb-mcp"
path = "src/main.rs"

[dependencies]
mdkb-core.workspace = true
