[package]
name = "mdkb-mcp"
description = "mdkb MCP server: exposes the mdkb tools over MCP (stdio), as a thin client of the daemon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mdkb-mcp"
path = "src/main.rs"

[dependencies]
mdkb-core = { workspace = true, features = ["serde"] }
mdkb-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
