[package]
name = "mdkb-view"
description = "Shared presentation layer for mdkb UIs: Markdown -> HTML rendering and page templating."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mdkb-core.workspace = true
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
