[package]
name = "mdkbd"
description = "mdkb headless daemon: owns the file watcher, index, and writes."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
onnx = ["mdkb-embed/onnx"]
# Remote OpenAI-compatible embeddings backend (opt-in; pulls a TLS client).
remote = ["mdkb-embed/remote"]

[dependencies]
mdkb-core.workspace = true
mdkb-index.workspace = true
mdkb-embed.workspace = true
mdkb-protocol.workspace = true
notify = "6"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
