[package]
name = "mkb-core"
description = "Shared engine for mkb: block model, transclusion, indexing, search."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
ulid.workspace = true
time.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

[features]
# `serde` is now a hard dependency (the TOML manifest parser needs it unconditionally). The
# feature is retained as a no-op so wire crates can keep requesting it, and the `cfg_attr`
# Serialize/Deserialize derives on protocol types stay gated to it.
default = []
serde = []

[dev-dependencies]
tempfile.workspace = true
