[package]
name = "mkb-protocol"
description = "Wire protocol (request/response types, client, dispatch) shared by the mkb daemon and its clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
interprocess = "2"
mkb-core = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
mkb-index.workspace = true
tempfile.workspace = true
