[package]
name = "mkbd"
description = "mkb headless daemon: owns the file watcher, index, and writes."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# vendored-model: the BGE-small ONNX weights are compiled into the daemon (via mkb-embed) so a
# plain `cargo build`/`cargo install` produces a fully self-contained daemon — semantic search
# works offline with no model files, no download, no config. ON by default. It implies `onnx`
# (the engine that runs those weights). A consumer who specifically does not want ~33MB of model
# bytes in their binary can opt out with `--no-default-features`; the daemon then resolves a model
# from disk (e.g. $MKB_BUNDLED_MODEL_DIR) and otherwise falls back to the offline hash embedder.
default = ["vendored-model"]
vendored-model = ["mkb-embed/vendored-model"]
# The ONNX engine without the embedded weights (e.g. to load a model from disk only).
onnx = ["mkb-embed/onnx"]
# Remote OpenAI-compatible embeddings backend (opt-in; pulls a TLS client).
remote = ["mkb-embed/remote"]

[dependencies]
mkb-core.workspace = true
mkb-index.workspace = true
mkb-embed.workspace = true
mkb-protocol.workspace = true
notify = "8"
libc = "0.2"
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
