[package]
name = "mkb-tauri"
version = "0.2.0"
description = "mkb desktop shell (Tauri) — a thin client over mkb-view + the daemon."
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

# Independent workspace: not part of the main cargo workspace (needs the Tauri toolchain).
[workspace]

[lib]
name = "mkb_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Reuse the shared mkb crates so the desktop UI renders through the shared view layer and can
# never diverge from the rest of the product.
mkb-core = { path = "../../../crates/mkb-core", features = ["serde"] }
mkb-protocol = { path = "../../../crates/mkb-protocol" }
mkb-view = { path = "../../../crates/mkb-view" }

[features]
custom-protocol = ["tauri/custom-protocol"]
